refs #4 - fixed module definitions so that the plugin can be built with browserify concatanating dependencies and exporting globals (jquery). Refactored css to use fontella icon fonts instead of font awesome. It is using embedded font icon definitions only for one icon which is close

--- a/src/assets/styles/mixins/_variables.scss
+++ b/src/assets/styles/mixins/_variables.scss
@@ -1,6 +1,20 @@
 /**
  *
  * =======================================================================
+   Font and Font Icon Reference
+ * =======================================================================
+ */
+/*
+$embedded-opentype="../fonts/font-awesome/fontawesome-webfont.eot";
+$woff2="../fonts/font-awesome/fontawesome-webfont.woff2";
+$="";
+$="";
+$="";
+$="";
+*/
+/**
+ *
+ * =======================================================================
    Font Sizes
  * =======================================================================
  */
