--- a/src/assets/styles/mixins/_functions.scss
+++ b/src/assets/styles/mixins/_functions.scss
@@ -156,7 +156,7 @@
   overflow-wrap: break-word;
   word-wrap: break-word;
   -ms-word-break: break-all;
-  word-break: break-word;
+  word-break: break-all;
   -ms-hyphens: auto;
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
